--- a/Makefile.am
+++ b/Makefile.am
@@ -35,7 +35,7 @@ SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade
 endif
 
 if INI
-SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade
+SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade HbbTV
 endif
 
 if INIHDP
