--- a/HbbTV/src/Makefile.am
+++ b/HbbTV/src/Makefile.am
@@ -1,13 +1,9 @@
 installdir = $(libdir)/enigma2/python/Plugins/Extensions/HbbTV
 
 install_PYTHON = \
-	keymap.xml \
 	__init__.py \
-	aitreader.py \
 	bookmark.py \
-	browser.py \
-	hbbtv.py \
-	plugin.py \
-	vbcfg.py \
-	vbipc.py \
-	youtube.py
+	aitreader.py \
+	plugin.py
+
+install_DATA = keymap.xml
