--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,7 @@ SUBDIRS += INIVFDControl
 endif
 
 if INI
-SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade
+SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade HbbTV
 endif
 
 if INIHDP
@@ -146,3 +146,4 @@ endif
 if GB800UEPLUS
 SUBDIRS += AudioEffect
 endif
+ 
