Revert "disable hbbtv"
This reverts commit 62deea100462cf61f1d56895af728bfae53ae91c.

--- a/Makefile.am
+++ b/Makefile.am
@@ -79,7 +79,7 @@ SUBDIRS += INIVFDControl
 endif
 
 if INI
-SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade
+SUBDIRS += VentonFancontrol Blindscan MICOMUpgrade HbbTV
 endif
 
 if INIHDP
