--- a/DLNABrowser/CONTROL/control
+++ b/DLNABrowser/CONTROL/control
@@ -2,4 +2,4 @@ Package: enigma2-plugin-extensions-dlnabrowser
 Version: 1.0-r0
 Description: this is dlna/upnp browser using djmount
 Maintainer: kos
-Depends: enigma2, djmount, fuse-utils
+Depends: enigma2, djmount, fuse-utils, enigma2-plugin-extensions-mediaplayer, enigma2-plugin-extensions-pictureplayer
