Do not build XtrendRemote for all models - please select each model individually

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,7 @@ SUBDIRS +=  DMBlindscan
 endif
 
 if XTREND
-SUBDIRS += XtrendFancontrol Blindscan XtrendRemote
+SUBDIRS += XtrendFancontrol Blindscan
 endif
 
 if ET10000
